--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ cortex-m-semihosting = "0.3"
 digest = "0.9.0"
 embedded-hal = { version = "0.2", features = ["unproven"] }
 generic-array = "0.14.3"
-lpc55-pac = "0.1.0"
+lpc55-pac = { git = "https://github.com/samueltardieu/lpc55-pac", branch = "fix-sau-peripheral" }
 
 nb = "1"
 # no-panic = "0.1.12"
